# firecrawlagent

./: .commit-message.txt  .cursorignore  .cursorrules  .cursor优化方案.md  .cursor目录优化完成总结.md  .editorconfig  .eslintignore  .gitignore  .markdownlint.json  .markdownlintignore  .prettierignore  .prettierrc.json  .vscode_settings_suggestion.json  AGENTS.md  AGENT_TEAM_OPENSPEC_COMPLETE.md  API_KEYS_QUICK_REFERENCE.md  API_KEYS_TEST_REPORT.md  Ad_Rate_Card.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_SUGGESTION.md  CONFIGURATION_SUMMARY.md  CONTRIBUTING.md  CURSOR_CONFIG_AUDIT.md  CURSOR_INITIALIZATION_COMPLETE.md  CURSOR_SETUP_VERIFICATION.md  CURSOR_SLASH_COMMANDS_GUIDE.md  CURSOR_性能优化完成报告_2025-10-28.md  CURSOR_配置问题修复报告_2025-10-28.md  DEPENDENCY_CLEANUP_REPORT.md  FIRECRAWL_TEMPLATES_SETUP_SUMMARY.md  Firecrawl官方文档学习计划.md  Firecrawl更新日志汇总.md  GITHUB_SETUP_COMPLETE.md  GIT_整理完成报告.md  GIT_整理完成报告_2025-10-28.md  HawaiiHub_Cursor_Master_Prompt.md  ISORT_EXTENSION_FIX.md  LICENSE  Makefile  (+54 more)
.cursor/: AUTO_APPROVAL_GUIDE.md  GLOBAL_AUTO_APPROVAL_SUMMARY.md  INITIALIZATION_REPORT.md  QUICK_REFERENCE_AUTO_APPROVAL.md  markdown-guide.md  settings.json.backup.20251026_173710
.cursor/prompts/: QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  hawaiihub-data-collection.md
.cursor/rules/: 00-hawaiihub-core.mdc  01-code-standards.mdc  02-documentation-control.mdc  99-deployment-safety.mdc  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Firecrawl学习手册/: README.md  文件索引.md  检查GitHub更新.sh  生成PDF电子书.py  生成PDF电子书.sh  项目发现报告.md  🎉完成总结.md  🎓Agent团队培训分类方案.md  📚PDF电子书生成完成报告.md  🔖Agent培训快速参考卡.md  🚀快速使用指南.md
Firecrawl学习手册/00-手册导读/: PDF封面.md  完整学习路线图.md  手册使用指南.md
Firecrawl学习手册/01-基础入门/: Firecrawl完整学习手册.md  说明文档.md
Firecrawl学习手册/02-官方文档/: Firecrawl官方文档学习完成报告.md
Firecrawl学习手册/03-API参考/: 08-Python-SDK完整指南.md  完整词汇表.md  词汇表.md
Firecrawl学习手册/03-API参考/词汇表/: 网页搜索API词汇表.md
Firecrawl学习手册/04-配置指南/: 云端配置指南.md  配置完成总结.md
Firecrawl学习手册/04-配置指南/代码脚本/: 分析博客脚本.py  爬取博客脚本.py
Firecrawl学习手册/05-实战案例/: HawaiiHub实战案例手册.md  博客内容.md  完整项目总索引.md  案例架构图集.md  检查GitHub更新.sh  示例项目完整索引.md
Firecrawl学习手册/07-Cursor-IDE-Agent最佳实践/: README.md  📊Firecrawl多步骤采集总结.md  🚀Cursor-IDE-Agent完整实战手册.md
Firecrawl学习手册/工作记录/文档整理报告/: Firecrawl文档最终整理报告.md
Firecrawl文档资料/: README.md
Firecrawl文档资料/代码脚本/: 快速配置脚本.sh
Firecrawl文档资料/工作记录/: 文档整理完成报告.md  文档翻译完成总结.md  文档翻译状态报告.md
Firecrawl文档资料/数据文件/: 博客文章数据.csv  博客文章数据.json
Firecrawl文档资料/文档指南/: 云端API规范.md  博客爬取总结.md  快速开始指南.md  快速索引.md  更新日志.md  生态系统指南.md  生态系统配置.md  研究总结.md
Firecrawl文档资料/词汇表/: 网页提取API词汇表.md  网页爬虫API词汇表.md  网页采集API词汇表.md
config/: hawaiihub_data_sources_summary.md  hawaiihub_scraping_strategy.md
docs/: .cursor优化完成报告.md  FIRECRAWL_55_TEMPLATES_CONFIG_COMPLETE.md  FIRECRAWL_TEMPLATES_CATALOG.md  GITHUB_QUICK_START.md  GITHUB_REPOSITORY_SETUP.md  GIT_HOOKS_SPECIFICATION.md  HAWAIIHUB_DATA_SOURCES_CATALOG.md  HAWAIIHUB_README.md  HAWAIIHUB_RESEARCH_COMPLETE.md  HAWAIIHUB_SCRAPER_QUICKSTART.md  MCP_DIAGNOSTIC_REPORT.md  QUICK_REFERENCE_GIT_HOOKS.md  SDK_LEARNING_SUMMARY.md  Sub-agent_Mode.md  文件整理完成报告.md
docs/analysis/: AI_WORKFLOW_RESEARCH_SUMMARY.md  GITHUB_PROJECTS_ANALYSIS.md  PROJECT_STRUCTURE_OPTIMIZATION.md
docs/archive/: QUICK_REFERENCE.md
docs/archive/2025-10-28-cleanup/: AGENT_TEAM_OPENSPEC_COMPLETE.md  CLEANUP_SUMMARY.md  CURSOR_CONFIG_COMPLETE_AUDIT.md  CURSOR_SETUP_SUMMARY.md  KUMANYUN_DATA_SUMMARY.md  OPENSPEC_GUIDE.md  README.md  ✅OpenSpec_Agent培训体系_完成.md  优化完成_Python环境.txt  依赖清理和配置优化完成报告.md  快速开始_Agent培训.md  执行完成清单.md  📌_文档清理行动指南.md  🔗_清理和配置文档导航.md
docs/cursor-guides/: README.md  configuration-checklist.md  cost-control.md  cursor-configuration.md  firecrawl-rules.md  hawaiihub-templates.md  python-standards.md  quick-reference.md  slash-commands.md
docs/guides/: CURSOR_GPT_TEMPLATES.md  MARKDOWN_SETUP_GUIDE.md  QUICK_REFERENCE_GUIDE.md
docs/reports/: CONFIGURATION_REPORT.md  CURSOR_RULES_UPDATE_SUMMARY.md  Firecrawl学习手册完整整理报告.md  PROJECT_CLEANUP_COMPLETE.md  PROJECT_CLEANUP_PLAN.md  PROJECT_CLEANUP_REPORT.md  RESOURCES_SUMMARY.md  docs_sync_report.md  项目清理完成总结.md
docs/setup/: API_KEYS_SETUP.md  CLOUD_API_RULES_SUMMARY.md  README_文档翻译.md  SETUP_COMPLETE.md
examples/: 00_test_setup.py  01_basic_scrape.py  02_crawl_website.py  03_batch_scrape.py  README.md
hawaiihub_news/: PROJECT_SUMMARY.md  QUICK_START.md  README.md  __init__.py  config.py  firebird_json_examples.py  main.py  schedule_scraper.sh  scraper.py  storage.py  火鸟JSON学习资料完成总结.md  火鸟JSON格式快速参考.md  火鸟新闻JSON格式规范.md  📚火鸟JSON学习资料索引.md
openspec/: AGENT_ROLES_GUIDE.md  AGENT_TEAM_QUICKSTART.md  README.md  project.md  start-training.sh
openspec/archive/: .gitkeep
openspec/changes/: .gitkeep
openspec/specs/: .gitkeep
openspec/specs/firecrawl-scraper/: spec.md
openspec/specs/hawaiihub-data/: spec.md
scripts/: check_cursor_config.sh  check_docs_sync.py  cleanup_dependencies.sh  cleanup_root_docs.sh  hawaiihub_scraper.py  hawaiihub_templates_setup.py  optimize_project.sh  performance_maintenance.sh  project_health_check.sh  setup_python_env.sh
src/: config.ts
templates/hawaiihub/: news_scraper.py  restaurant_scraper.py
templates/python/: scraper_template.py
tests/: test_example.py
