# FireShot é¡¹ç›®é…ç½®æ–‡ä»¶
# Python å¼€å‘çŽ¯å¢ƒï¼šRuff + mypy + pytest

[project]
name = "fireshot"
version = "1.0.0"
description = "Firecrawl äº‘ API æœ€ä½³å®žè·µå’Œ HawaiiHub æ•°æ®é‡‡é›†"
authors = [{ name = "HawaiiHub AI Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "firecrawl-py>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.9",
    "mypy>=1.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0",
]

# ========================================
# ðŸ”¥ Ruff é…ç½®ï¼ˆæ ¼å¼åŒ– + Lintingï¼‰
# ========================================
[tool.ruff]
line-length = 88
target-version = "py311"

# æŽ’é™¤ç›®å½•
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "logs",
    "data",
    ".steel",
    "å†…å®¹æ•°æ®åº“",
    "Firecrawlå®˜æ–¹æ–‡æ¡£",
]

[tool.ruff.lint]
# å¯ç”¨çš„æ£€æŸ¥è§„åˆ™
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (å¯¼å…¥æŽ’åº)
    "B",   # flake8-bugbear (å¸¸è§é”™è¯¯)
    "C4",  # flake8-comprehensions (åˆ—è¡¨æŽ¨å¯¼ä¼˜åŒ–)
    "UP",  # pyupgrade (Python ç‰ˆæœ¬å‡çº§å»ºè®®)
    "SIM", # flake8-simplify (ä»£ç ç®€åŒ–)
]

# å¿½ç•¥çš„è§„åˆ™
ignore = [
    "E501",  # è¡Œé•¿åº¦ï¼ˆç”±æ ¼å¼åŒ–å™¨å¤„ç†ï¼‰
    "B008",  # å‡½æ•°è°ƒç”¨åœ¨å‚æ•°é»˜è®¤å€¼ï¼ˆFastAPI éœ€è¦ï¼‰
    "B904",  # raise ... from errï¼ˆç®€åŒ–é”™è¯¯å¤„ç†ï¼‰
]

# æ¯ä¸ªæ–‡ä»¶å…è®¸çš„æœªä½¿ç”¨å¯¼å…¥
per-file-ignores = { "__init__.py" = ["F401"], "test_*.py" = ["F401", "F811"] }

[tool.ruff.format]
# æ ¼å¼åŒ–é€‰é¡¹
quote-style = "double"              # å¼ºåˆ¶åŒå¼•å·
indent-style = "space"              # ä½¿ç”¨ç©ºæ ¼ç¼©è¿›
skip-magic-trailing-comma = false   # ä¿ç•™å°¾éšé€—å·
line-ending = "auto"                # è‡ªåŠ¨æ£€æµ‹è¡Œå°¾

[tool.ruff.lint.isort]
# å¯¼å…¥æŽ’åºé…ç½®
known-first-party = ["src", "scripts"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

# ========================================
# ðŸ” mypy é…ç½®ï¼ˆç±»åž‹æ£€æŸ¥ï¼‰
# ========================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
show_error_codes = true
pretty = true

# å¿½ç•¥ç¼ºå¤±çš„ç¬¬ä¸‰æ–¹åº“ç±»åž‹
ignore_missing_imports = true

# æŽ’é™¤ç›®å½•
exclude = [
    "build/",
    "dist/",
    "venv/",
    ".venv/",
    "logs/",
    "data/",
]

# ç¬¬ä¸‰æ–¹åº“ç‰¹æ®Šé…ç½®
[[tool.mypy.overrides]]
module = "firecrawl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dotenv.*"
ignore_missing_imports = true

# æµ‹è¯•æ–‡ä»¶æ”¾å®½é™åˆ¶
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

# ========================================
# ðŸ§ª pytest é…ç½®ï¼ˆæµ‹è¯•æ¡†æž¶ï¼‰
# ========================================
[tool.pytest.ini_options]
# æµ‹è¯•ç›®å½•å’Œæ–‡ä»¶æ¨¡å¼
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# æµ‹è¯•é€‰é¡¹
addopts = [
    "-v",                        # è¯¦ç»†è¾“å‡º
    "--tb=short",                # çŸ­é”™è¯¯è¿½è¸ª
    "--color=yes",               # å½©è‰²è¾“å‡º
    "--strict-markers",          # ä¸¥æ ¼æ ‡è®°æ¨¡å¼
    # è¦†ç›–çŽ‡æ£€æŸ¥ï¼ˆå½“æœ‰ src ç›®å½•ä»£ç æ—¶å¯ç”¨ï¼‰
    # "--cov=src",
    # "--cov-report=html",
    # "--cov-report=term-missing",
    # "--cov-fail-under=80",
]

# æ ‡è®°å®šä¹‰
markers = [
    "slow: æ ‡è®°æ…¢é€Ÿæµ‹è¯•ï¼ˆéœ€è¦ç½‘ç»œè¯·æ±‚ï¼‰",
    "integration: æ ‡è®°é›†æˆæµ‹è¯•ï¼ˆéœ€è¦çœŸå®ž APIï¼‰",
    "unit: æ ‡è®°å•å…ƒæµ‹è¯•ï¼ˆä¸ä¾èµ–å¤–éƒ¨èµ„æºï¼‰",
]

# è¦†ç›–çŽ‡é…ç½®
[tool.coverage.run]
source = ["src", "scripts"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ========================================
# ðŸ“¦ æž„å»ºé…ç½®
# ========================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

